aligned hint button with submit  + fixed css quiz play and answer inputs

--- a/src/app/components/answer-input/answer-input.scss
+++ b/src/app/components/answer-input/answer-input.scss
@@ -9,6 +9,10 @@
   width: 100%;
 }
 
-button {
-  align-self: flex-end;
+.answer-actions {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: flex-end;
+  flex-wrap: wrap;
 }
